--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^7.0.1",
     "@angular-material-extensions/password-strength": "^10.1.1",
     "@angular/animations": "~13.2.0",
     "@angular/cdk": "^13.3.6",
@@ -19,7 +20,7 @@
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.3.6",
-    "@angular/material-moment-adapter": "^13.3.6",
+    "@angular/material-moment-adapter": "^13.3.7",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
@@ -27,7 +28,9 @@
     "highcharts": "^10.1.0",
     "highcharts-angular": "^3.0.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.3",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-material-timepicker": "^5.5.3",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
